Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <label>Account Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>