Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/First_Entered_Shopping_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Entered_Shopping_Date__c</fullName>
    <label>First Entered Shopping Date</label>
    <type>Date</type>
</CustomField>