Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <label>Forecast Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>