Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/Intapp_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>Intapp_Opportunity_Number__c</fullName>
    <label>Intapp Opportunity Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>