Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/Product_Line_OPC__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_OPC__c</fullName>
    <label>Product Line (OPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>