Doc/force-app/main/default/objects/Sales_Funnel_OPC_Snapshot__c/fields/Sales_Category_OPC__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category_OPC__c</fullName>
    <label>Sale Category (OPC)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>